--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bower install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,7 @@
   "dependencies": {
     "express": "^4.12.3",
     "mithril": "^0.1.34-beta.0"
+    "pg": "4.x",
+    "express": "^4.12.3"
   }
 }
