--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/VivaciousVivachas/VivaciousVivachas",
   "dependencies": {
-    "bower": "^1.4.1",
-    "express": "^4.12.3"
+    "cron": "^1.0.9",
+    "express": "^4.12.3",
+    "mithril": "^0.1.34-beta.0",
+    "request": "^2.55.0"
   }
 }
