--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "> An easy way to meet fellow developers.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
