added body parser

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/VivaciousVivachas/VivaciousVivachas",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.12.3",
     "cron": "^1.0.9",
     "express": "^4.12.3",
     "jwt-simple": "^0.3.0",
