--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "VivaciousVivachas",
   "version": "1.0.0",
   "description": "> An easy way to meet fellow developers.",
+  "engines": {
+    "node": "0.12.2"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
